# raylib-boilerplate

./: .gitignore  .gitmodules  AGENTS.md  CMakeLists.txt  CMakePresets.json  LIVE_TESTING_GUIDE.md  README.md  REFACTORING.md  dev.sh
.github/workflows/: crossplatform-build.yml
docs/: animals.md  context-current.md  ecs-cleanup-phase1-plan.md  ecs-cleanup-plan.md  multiplayer-architecture.md  multiplayer-runbook.md  object-atlas-pipeline-plan.md  project-feature-guide.md  runtime-phase1-plan.md  runtime-phase10-plan.md  runtime-phase11-plan.md  runtime-phase12-plan.md  runtime-phase13-plan.md  runtime-phase14-plan.md  runtime-phase2-plan.md  runtime-phase4-plan.md  runtime-phase5-plan.md  runtime-phase6-plan.md  runtime-phase7-plan.md  runtime-phase8-plan.md  runtime-phase9-plan.md  runtime-reshape-plan.md  world-tileset-spec.md
src/: main.cpp
src/client/: client_entry.cpp  client_entry.hpp  game_client.cpp  game_client.hpp  main.cpp
src/client/app/: client_app.cpp  client_app.hpp
src/client/components/: components.hpp
src/client/core/: application.hpp  client_args.hpp  client_config.hpp  client_config_policy.hpp  config.cpp  config.hpp  menu_model.hpp  runtime_state.hpp  scene.hpp  scene_manager.hpp  server_launcher.hpp  server_launcher_process.cpp  server_launcher_process.hpp  singleplayer_runtime.cpp  singleplayer_runtime.hpp
src/client/input/: input_manager.hpp  input_policy.hpp
src/client/modules/: client_phases.hpp  client_runtime_module.hpp
src/client/physics/: movement_system.hpp
src/client/render/: background_renderer.hpp  render_policy.hpp  render_theme.hpp  splash_renderer.hpp  status_presenter.hpp  status_renderer.hpp  world_renderer.hpp
src/client/runtime/: client_presentation_builder.cpp  client_presentation_builder.hpp  client_runtime.cpp  client_runtime.hpp  client_runtime_context.hpp  client_runtime_flow.cpp  client_runtime_flow.hpp  client_runtime_policy.hpp  client_ui_controller.cpp  client_ui_controller.hpp  client_ui_document_factory.cpp  client_ui_document_factory.hpp  multiplayer_session_service.cpp  multiplayer_session_service.hpp  options_service.cpp  options_service.hpp  runtime_resources.hpp  singleplayer_session_service.cpp  singleplayer_session_service.hpp
src/client/scenes/: menu_scene.hpp  sandbox_scene.hpp  splash_scene.hpp
src/client/systems/: render_system.hpp
src/client/ui/: debug_overlay.hpp  ui_document.hpp  ui_policy.hpp  ui_renderer.hpp  ui_state.hpp
src/components/: Components.hpp
src/core/: Application.hpp  Config.hpp  Scene.hpp  SceneManager.hpp
src/input/: InputManager.hpp
src/physics/: MovementSystem.hpp
src/scenes/: MenuScene.hpp  SandboxScene.hpp  SplashScene.hpp
src/server/: game_server.cpp  game_server.hpp  main.cpp  world_persistence.cpp  world_persistence.hpp
src/server/app/: server_app.cpp  server_app.hpp
src/server/config/: server.cfg  server_config.cpp  server_config.hpp  server_config_policy.hpp
src/server/modules/: server_phases.hpp  server_runtime_module.hpp
src/server/runtime/: server_runtime.cpp  server_runtime.hpp  server_runtime_context.hpp  server_runtime_ops.cpp  server_runtime_ops.hpp  server_runtime_policy.hpp  server_runtime_state.hpp
src/shared/game/: chunk.hpp  chunk_streaming.hpp  commands.hpp  entity.hpp  events.hpp  fixed_step.hpp  game_policy.hpp  game_state.hpp  ids.hpp  interpolation.hpp  inventory.hpp  math_types.hpp  prediction.hpp  validation.hpp  world.hpp
src/shared/net/: auth.hpp  delta.hpp  lanes.hpp  message_ids.hpp  net_policy.hpp  protocol.hpp  send_policy.hpp  serializer.hpp  snapshot.hpp  transport.hpp  transport_gns.cpp  transport_gns.hpp
src/systems/: RenderSystem.hpp
src/ui/: DebugOverlay.hpp
tests/: CMakeLists.txt
tests/net/: policy_catalogs.cpp  send_policy.cpp  serializer_roundtrip.cpp
tests/sim/: chunk_delta.cpp  chunk_interest.cpp  client_args.cpp  client_config_file.cpp  client_multiplayer_session_service.cpp  client_pipeline.cpp  client_runtime_acceptance.cpp  client_runtime_flow_resources.cpp  client_session_resources.cpp  fixed_step_sim.cpp  input_validation.cpp  interpolation_buffer.cpp  join_form_model.cpp  menu_model.cpp  options_service.cpp  policy_catalogs.cpp  runtime_scene_transitions.cpp  server_launcher_process.cpp  server_pipeline.cpp  singleplayer_runtime.cpp  singleplayer_session_service.cpp  status_presenter.cpp  ui_document.cpp
