add_executable(test_net_serializer_roundtrip net/serializer_roundtrip.cpp)
target_include_directories(test_net_serializer_roundtrip PRIVATE ${CMAKE_SOURCE_DIR}/src)
target_link_libraries(test_net_serializer_roundtrip PRIVATE shared_game shared_net)

add_executable(test_net_send_policy net/send_policy.cpp)
target_include_directories(test_net_send_policy PRIVATE ${CMAKE_SOURCE_DIR}/src)
target_link_libraries(test_net_send_policy PRIVATE shared_game shared_net)

add_executable(test_sim_fixed_step sim/fixed_step_sim.cpp)
target_include_directories(test_sim_fixed_step PRIVATE ${CMAKE_SOURCE_DIR}/src)
target_link_libraries(test_sim_fixed_step PRIVATE shared_game)

add_executable(test_sim_input_validation sim/input_validation.cpp)
target_include_directories(test_sim_input_validation PRIVATE ${CMAKE_SOURCE_DIR}/src)
target_link_libraries(test_sim_input_validation PRIVATE shared_game)

add_executable(test_sim_interpolation_buffer sim/interpolation_buffer.cpp)
target_include_directories(test_sim_interpolation_buffer PRIVATE ${CMAKE_SOURCE_DIR}/src)
target_link_libraries(test_sim_interpolation_buffer PRIVATE shared_game)

add_executable(test_sim_chunk_interest sim/chunk_interest.cpp)
target_include_directories(test_sim_chunk_interest PRIVATE ${CMAKE_SOURCE_DIR}/src)
target_link_libraries(test_sim_chunk_interest PRIVATE shared_game)

add_executable(test_sim_chunk_delta sim/chunk_delta.cpp)
target_include_directories(test_sim_chunk_delta PRIVATE ${CMAKE_SOURCE_DIR}/src)
target_link_libraries(test_sim_chunk_delta PRIVATE shared_game)

add_executable(test_sim_menu_model sim/menu_model.cpp)
target_include_directories(test_sim_menu_model PRIVATE ${CMAKE_SOURCE_DIR}/src)
target_link_libraries(test_sim_menu_model PRIVATE shared_game)

add_executable(test_sim_runtime_scene_transitions sim/runtime_scene_transitions.cpp)
target_include_directories(test_sim_runtime_scene_transitions PRIVATE ${CMAKE_SOURCE_DIR}/src)
target_link_libraries(test_sim_runtime_scene_transitions PRIVATE shared_game)

add_executable(test_sim_join_form_model sim/join_form_model.cpp)
target_include_directories(test_sim_join_form_model PRIVATE ${CMAKE_SOURCE_DIR}/src)
target_link_libraries(test_sim_join_form_model PRIVATE shared_game)

add_executable(test_sim_ui_document sim/ui_document.cpp)
target_include_directories(test_sim_ui_document PRIVATE ${CMAKE_SOURCE_DIR}/src)
target_link_libraries(test_sim_ui_document PRIVATE shared_game)

add_executable(test_sim_status_presenter sim/status_presenter.cpp)
target_include_directories(test_sim_status_presenter PRIVATE ${CMAKE_SOURCE_DIR}/src)
target_link_libraries(test_sim_status_presenter PRIVATE shared_game)

add_executable(test_sim_client_pipeline sim/client_pipeline.cpp)
target_include_directories(test_sim_client_pipeline PRIVATE ${CMAKE_SOURCE_DIR}/src)
target_link_libraries(test_sim_client_pipeline PRIVATE ${FLECS_LIB})

add_executable(test_sim_server_pipeline sim/server_pipeline.cpp)
target_include_directories(test_sim_server_pipeline PRIVATE ${CMAKE_SOURCE_DIR}/src)
target_link_libraries(test_sim_server_pipeline PRIVATE ${FLECS_LIB})

add_executable(test_sim_client_args sim/client_args.cpp)
target_include_directories(test_sim_client_args PRIVATE ${CMAKE_SOURCE_DIR}/src)
target_link_libraries(test_sim_client_args PRIVATE shared_game argparse::argparse)

add_executable(test_sim_client_config_file
    sim/client_config_file.cpp
    ${CMAKE_SOURCE_DIR}/src/client/core/config.cpp
)
target_include_directories(test_sim_client_config_file PRIVATE ${CMAKE_SOURCE_DIR}/src)
target_link_libraries(test_sim_client_config_file PRIVATE shared_game)

add_executable(test_sim_server_launcher_process
    sim/server_launcher_process.cpp
    ${CMAKE_SOURCE_DIR}/src/client/core/server_launcher_process.cpp
)
target_include_directories(test_sim_server_launcher_process PRIVATE ${CMAKE_SOURCE_DIR}/src)
target_link_libraries(test_sim_server_launcher_process PRIVATE shared_game)

add_executable(test_sim_singleplayer_runtime
    sim/singleplayer_runtime.cpp
    ${CMAKE_SOURCE_DIR}/src/client/core/singleplayer_runtime.cpp
)
target_include_directories(test_sim_singleplayer_runtime PRIVATE ${CMAKE_SOURCE_DIR}/src)
target_link_libraries(test_sim_singleplayer_runtime PRIVATE shared_game)

add_executable(test_sim_client_runtime_flow_resources sim/client_runtime_flow_resources.cpp)
target_include_directories(test_sim_client_runtime_flow_resources PRIVATE ${CMAKE_SOURCE_DIR}/src)
target_link_libraries(test_sim_client_runtime_flow_resources PRIVATE shared_game)

add_test(NAME test_net_serializer_roundtrip COMMAND test_net_serializer_roundtrip)
add_test(NAME test_net_send_policy COMMAND test_net_send_policy)
add_test(NAME test_sim_fixed_step COMMAND test_sim_fixed_step)
add_test(NAME test_sim_input_validation COMMAND test_sim_input_validation)
add_test(NAME test_sim_interpolation_buffer COMMAND test_sim_interpolation_buffer)
add_test(NAME test_sim_chunk_interest COMMAND test_sim_chunk_interest)
add_test(NAME test_sim_chunk_delta COMMAND test_sim_chunk_delta)
add_test(NAME test_sim_menu_model COMMAND test_sim_menu_model)
add_test(NAME test_sim_runtime_scene_transitions COMMAND test_sim_runtime_scene_transitions)
add_test(NAME test_sim_join_form_model COMMAND test_sim_join_form_model)
add_test(NAME test_sim_ui_document COMMAND test_sim_ui_document)
add_test(NAME test_sim_status_presenter COMMAND test_sim_status_presenter)
add_test(NAME test_sim_client_pipeline COMMAND test_sim_client_pipeline)
add_test(NAME test_sim_server_pipeline COMMAND test_sim_server_pipeline)
add_test(NAME test_sim_client_args COMMAND test_sim_client_args)
add_test(NAME test_sim_client_config_file COMMAND test_sim_client_config_file)
add_test(NAME test_sim_server_launcher_process COMMAND test_sim_server_launcher_process)
add_test(NAME test_sim_singleplayer_runtime COMMAND test_sim_singleplayer_runtime)
add_test(NAME test_sim_client_runtime_flow_resources COMMAND test_sim_client_runtime_flow_resources)
